--- a/app/src/main/res/layout/component_rule.xml
+++ b/app/src/main/res/layout/component_rule.xml
@@ -20,8 +20,9 @@
                 android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/rule_switch"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/rule_delete_button"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/rule_delete_button"
+                app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"/>
         <TextView
                 android:text="TextView"
                 android:textSize="18dp"
@@ -29,7 +30,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/rule_name"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/rule_switch"/>
+                app:layout_constraintEnd_toStartOf="@+id/rule_switch"
+                app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"/>
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -38,7 +40,11 @@
                 app:srcCompat="@drawable/baseline_delete_forever_24"
                 android:id="@+id/rule_delete_button"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" tools:layout_editor_absoluteX="10dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/constraintLayout3"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
