--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -230,11 +230,142 @@
                             android:layout_margin="4dp"
                             android:id="@+id/edit_rule_vibration_step_container"
                             android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent">
-
+                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
 
                     </LinearLayout>
+
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" android:id="@+id/constraintLayout5"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+                            app:layout_constraintTop_toBottomOf="@+id/edit_rule_vibration_step_container">
+
+                        <Button
+                                android:text="Preview"
+                                android:layout_width="wrap_content"
+                                android:padding="0dp"
+                                style="@style/Widget.Material3.Button.TextButton"
+                                android:drawablePadding="0dp"
+                                android:drawableRight="@drawable/baseline_play_circle_24"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/edit_rule_vibration_preview_button"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toEndOf="@+id/edit_rule_vibration_step_mode_chip"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
+                        <Button
+                                android:text="Clear"
+                                android:layout_width="wrap_content"
+                                android:padding="0dp"
+                                style="@style/Widget.Material3.Button.TextButton"
+                                android:drawablePadding="0dp"
+                                android:drawableRight="@drawable/baseline_clear_all_24"
+                                android:layout_height="wrap_content" android:id="@+id/edit_rule_vibration_clear_button"
+                                app:layout_constraintEnd_toStartOf="@+id/edit_rule_vibration_step_mode_chip"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
+
+                        <com.google.android.material.chip.Chip
+                                app:chipMinHeight="42dp"
+                                android:text="Add: Type"
+                                style="@style/Widget.Material3.Chip.Filter.Elevated"
+                                android:checkable="false"
+                                android:layout_width="wrap_content"
+                                android:layout_height="36dp" android:id="@+id/edit_rule_vibration_step_mode_chip"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"/>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
+
+
+                        <Button
+                                android:text="XXS"
+                                android:layout_width="0dp"
+                                android:padding="0dp"
+                                android:layout_weight="1"
+                                style="@style/Widget.AppCompat.Button"
+                                android:drawablePadding="0dp"
+                                android:id="@+id/edit_rule_vibration_XXS"
+                                android:layout_height="47dp"
+                                tools:layout_editor_absoluteX="283dp" tools:layout_editor_absoluteY="0dp"/>
+
+                        <Button
+                                android:text="XS"
+                                android:layout_width="0dp"
+                                android:padding="0dp"
+                                android:layout_weight="1"
+                                style="@style/Widget.AppCompat.Button"
+                                android:drawablePadding="0dp"
+                                android:layout_height="47dp"
+                                android:id="@+id/edit_rule_vibration_XS"
+                                tools:layout_editor_absoluteX="283dp" tools:layout_editor_absoluteY="0dp"/>
+                        <Button
+                                android:text="S"
+                                android:layout_width="0dp"
+                                android:padding="0dp"
+                                android:layout_weight="1"
+                                style="@style/Widget.AppCompat.Button"
+                                android:drawablePadding="0dp"
+                                android:layout_height="47dp"
+                                android:id="@+id/edit_rule_vibration_S"
+                                tools:layout_editor_absoluteX="283dp" tools:layout_editor_absoluteY="0dp"/>
+                        <Button
+                                android:text="M"
+                                android:layout_width="0dp"
+                                android:padding="0dp"
+                                android:layout_weight="1"
+                                style="@style/Widget.AppCompat.Button"
+                                android:drawablePadding="0dp"
+                                android:layout_height="47dp"
+                                android:id="@+id/edit_rule_vibration_M"
+                                tools:layout_editor_absoluteX="283dp" tools:layout_editor_absoluteY="0dp"/>
+                        <Button
+                                android:text="L"
+                                android:layout_width="0dp"
+                                android:padding="0dp"
+                                android:layout_weight="1"
+                                style="@style/Widget.AppCompat.Button"
+                                android:drawablePadding="0dp"
+                                android:layout_height="47dp"
+                                android:id="@+id/edit_rule_vibration_L"
+                                tools:layout_editor_absoluteX="283dp" tools:layout_editor_absoluteY="0dp"/>
+                        <Button
+                                android:text="XL"
+                                android:layout_width="0dp"
+                                android:padding="0dp"
+                                android:layout_weight="1"
+                                style="@style/Widget.AppCompat.Button"
+                                android:drawablePadding="0dp"
+                                android:layout_height="47dp"
+                                android:id="@+id/edit_rule_vibration_XL"
+                                tools:layout_editor_absoluteX="283dp" tools:layout_editor_absoluteY="0dp"/>
+                        <Button
+                                android:text="XXL"
+                                android:layout_width="0dp"
+                                android:padding="0dp"
+                                android:layout_weight="1"
+                                style="@style/Widget.AppCompat.Button"
+                                android:drawablePadding="0dp"
+                                android:layout_height="47dp"
+                                android:id="@+id/edit_rule_vibration_XXL"
+                                tools:layout_editor_absoluteX="283dp" tools:layout_editor_absoluteY="0dp"/>
+
+                    </LinearLayout>
+
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
