--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,6 +20,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+            <TextView
+                    android:text="Settings"
+                    android:layout_width="match_parent"
+                    android:textStyle="bold"
+                    android:textSize="22dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_height="wrap_content" android:id="@+id/textView19"/>
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:padding="14dp"
@@ -47,11 +55,11 @@
                             android:textColor="#9E9E9E"
                             app:layout_constraintTop_toBottomOf="@+id/textView12"
                             app:layout_constraintBottom_toBottomOf="@+id/constraintLayout8"
-                            app:layout_constraintEnd_toStartOf="@+id/enable_inactive_rule_hours_switch"/>
+                            app:layout_constraintEnd_toStartOf="@+id/enable_active_rule_hours_switch"/>
                     <Switch
                             android:text=""
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" android:id="@+id/enable_inactive_rule_hours_switch"
+                            android:layout_height="wrap_content" android:id="@+id/enable_active_rule_hours_switch"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -61,7 +69,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:id="@+id/edit_rule_inactive_hours"
+                        android:id="@+id/edit_rule_active_hours"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
                         app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
@@ -77,72 +85,141 @@
 
                     <LinearLayout
                             android:orientation="horizontal"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:layout_marginTop="8dp"
+                            android:padding="2dp"
                             app:layout_constraintTop_toBottomOf="@+id/textView18"
                             android:id="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent">
 
 
-                        <com.google.android.material.chip.Chip
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAlignment="center"
-                                android:text="M"
-                                app:chipMinHeight="42dp"
-                                android:layout_weight="1"
-                                android:id="@+id/chip3" />
-                        <com.google.android.material.chip.Chip
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAlignment="center"
-                                android:text="T"
-                                app:chipMinHeight="42dp"
-                                android:layout_weight="1"
-                                android:id="@+id/chip3" />
-                        <com.google.android.material.chip.Chip
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAlignment="center"
-                                android:text="W"
-                                app:chipMinHeight="42dp"
-                                android:layout_weight="1"
-                                android:id="@+id/chip3" />
-                        <com.google.android.material.chip.Chip
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAlignment="center"
-                                android:text="T"
-                                app:chipMinHeight="42dp"
-                                android:layout_weight="1"
-                                android:id="@+id/chip3" />
-                        <com.google.android.material.chip.Chip
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAlignment="center"
-                                android:text="F"
-                                app:chipMinHeight="42dp"
-                                android:layout_weight="1"
-                                android:id="@+id/chip3" />
-                        <com.google.android.material.chip.Chip
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="center"
-                            android:text="S"
-                            app:chipMinHeight="42dp"
-                            android:layout_weight="1"
-                            android:id="@+id/chip3" />
-                        <com.google.android.material.chip.Chip
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAlignment="center"
-                                android:text="S"
-                                app:chipMinHeight="42dp"
-                                android:layout_weight="1"
-                                android:id="@+id/chip3" />
+                        <androidx.cardview.widget.CardView
+                                app:circularflow_defaultRadius="40dp"
+                                android:id="@+id/active_day_mon_card"
+                                app:cardElevation="0dp"
+                                app:cardCornerRadius="100dp"
+                                android:layout_margin="2dp"
+                                android:layout_width="42dp"
+                                android:layout_height="42dp">
 
+                            <TextView
+                                    android:text="M"
+                                    android:textSize="18sp"
+                                    android:textAlignment="center"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"/>
 
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                                app:circularflow_defaultRadius="40dp"
+                                app:cardElevation="0dp"
+                                android:id="@+id/active_day_tue_card"
+                                app:cardCornerRadius="100dp"
+                                android:layout_margin="2dp"
+                                android:layout_width="42dp"
+                                android:layout_height="42dp">
 
+                            <TextView
+                                    android:text="T"
+                                    android:textSize="18sp"
+                                    android:textAlignment="center"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"/>
+
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                                app:circularflow_defaultRadius="40dp"
+                                android:id="@+id/active_day_wed_card"
+                                app:cardElevation="0dp"
+                                app:cardCornerRadius="100dp"
+                                android:layout_margin="2dp"
+                                android:layout_width="42dp"
+                                android:layout_height="42dp">
+
+                            <TextView
+                                    android:text="W"
+                                    android:textSize="18sp"
+                                    android:textAlignment="center"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"/>
+
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                                app:circularflow_defaultRadius="40dp"
+                                android:id="@+id/active_day_thu_card"
+                                app:cardElevation="0dp"
+                                app:cardCornerRadius="100dp"
+                                android:layout_margin="2dp"
+                                android:layout_width="42dp"
+                                android:layout_height="42dp">
+
+                            <TextView
+                                    android:text="T"
+                                    android:textSize="18sp"
+                                    android:textAlignment="center"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"/>
+
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                                app:circularflow_defaultRadius="40dp"
+                                android:id="@+id/active_day_fri_card"
+                                app:cardElevation="0dp"
+                                app:cardCornerRadius="100dp"
+                                android:layout_margin="2dp"
+                                android:layout_width="42dp"
+                                android:layout_height="42dp">
+
+                            <TextView
+                                    android:text="F"
+                                    android:textSize="18sp"
+                                    android:textAlignment="center"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"/>
+
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                                app:circularflow_defaultRadius="40dp"
+                                android:id="@+id/active_day_sat_card"
+                                app:cardElevation="0dp"
+                                app:cardCornerRadius="100dp"
+                                android:layout_margin="2dp"
+                                android:layout_width="42dp"
+                                android:layout_height="42dp">
+
+                            <TextView
+                                    android:text="S"
+                                    android:textSize="18sp"
+                                    android:textAlignment="center"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"/>
+
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                                app:circularflow_defaultRadius="40dp"
+                                android:id="@+id/active_day_sun_card"
+                                app:cardElevation="0dp"
+                                app:cardCornerRadius="100dp"
+                                android:layout_margin="2dp"
+                                android:layout_width="42dp"
+                                android:layout_height="42dp">
+
+                            <TextView
+                                    android:text="S"
+                                    android:textSize="18sp"
+                                    android:textAlignment="center"
+                                    android:gravity="center"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"/>
+
+                        </androidx.cardview.widget.CardView>
 
 
 
@@ -152,6 +229,7 @@
                     <TextView
                             android:text="Active hours"
                             android:textSize="20dp"
+                            android:layout_marginTop="8dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" android:id="@+id/textView17"
                             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
